--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png">
     <link rel="icon" type="image/png" href="/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    @*TODO: title*@
     <title>@ViewData["Title"] - LibApp.WebApp</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
     <!--     Fonts and icons     -->
@@ -25,13 +26,12 @@
 
                 @*TODO: index page link*@
 
-                <a href="https://www.creative-tim.com" class="simple-text logo-mini">
+                <a class="simple-text logo-mini" asp-controller="Home" asp-action="Index">
                     <div class="logo-image-small">
                         <img src="/img/logo-color-small.png">
                     </div>
-                    <!-- <p>CT</p> -->
                 </a>
-                <a href="https://www.creative-tim.com" class="simple-text logo-normal">
+                <a class="simple-text logo-normal" asp-controller="Home" asp-action="Index">
                     LibApp
                 </a>
             </div>
