LibApp.WebApp - _SidebarPartial Pages

--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -12,6 +12,7 @@
             LibApp
         </a>
     </div>
+    @*TODO: Links*@
     <div class="sidebar-wrapper">
         <ul class="nav">
             <li class="active ">
@@ -22,44 +23,68 @@
             </li>
             <li>
                 <a href="./icons.html">
-                    <i class="nc-icon nc-diamond"></i>
-                    <p>Icons</p>
+                    <i class="nc-icon nc-book-bookmark"></i>
+                    <p>Books</p>
                 </a>
             </li>
             <li>
                 <a href="./map.html">
-                    <i class="nc-icon nc-pin-3"></i>
-                    <p>Maps</p>
+                    <i class="nc-icon nc-money-coins"></i>
+                    <p>Rates</p>
+                </a>
+            </li>
+            <li>
+                <a href="./typography.html">
+                    <i class="nc-icon nc-tag-content"></i>
+                    <p>Categories</p>
                 </a>
             </li>
             <li>
                 <a href="./notifications.html">
-                    <i class="nc-icon nc-bell-55"></i>
-                    <p>Notifications</p>
+                    <i class="nc-icon nc-badge"></i>
+                    <p>Authors</p>
                 </a>
             </li>
             <li>
                 <a href="./user.html">
-                    <i class="nc-icon nc-single-02"></i>
-                    <p>User Profile</p>
+                    <i class="nc-icon nc-bold"></i>
+                    <p>Publishers</p>
                 </a>
             </li>
             <li>
                 <a href="./tables.html">
                     <i class="nc-icon nc-tile-56"></i>
-                    <p>Table List</p>
+                    <p>Departments</p>
                 </a>
             </li>
             <li>
-                <a href="./typography.html">
-                    <i class="nc-icon nc-caps-small"></i>
-                    <p>Typography</p>
+                <a href="./upgrade.html">
+                    <i class="nc-icon nc-globe"></i>
+                    <p>Languages</p>
+                </a>
+            </li>
+            <li>
+                <a href="./upgrade.html">
+                    <i class="nc-icon nc-single-02"></i>
+                    <p>Users</p>
+                </a>
+            </li>
+            <li>
+                <a href="./upgrade.html">
+                    <i class="nc-icon nc-settings-gear-65"></i>
+                    <p>Profile</p>
+                </a>
+            </li>
+            <li>
+                <a href="./upgrade.html">
+                    <i class="nc-icon nc-check-2"></i>
+                    <p>Reservations</p>
                 </a>
             </li>
             <li class="active-pro">
                 <a href="./upgrade.html">
-                    <i class="nc-icon nc-spaceship"></i>
-                    <p>Upgrade to PRO</p>
+                    <i class="nc-icon nc-single-copy-04"></i>
+                    <p>Logs</p>
                 </a>
             </li>
         </ul>
