--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -16,73 +16,75 @@
     <div class="sidebar-wrapper">
         <ul class="nav">
             <li class="active ">
-                <a href="./dashboard.html">
+                <a asp-controller="Home" asp-action="Dashboard">
                     <i class="nc-icon nc-bank"></i>
                     <p>Dashboard</p>
                 </a>
             </li>
             <li>
-                <a href="./icons.html">
+                <a asp-controller="Book" asp-action="Index">
                     <i class="nc-icon nc-book-bookmark"></i>
                     <p>Books</p>
                 </a>
             </li>
+            
             <li>
-                <a href="./map.html">
-                    <i class="nc-icon nc-money-coins"></i>
-                    <p>Rates</p>
-                </a>
-            </li>
-            <li>
-                <a href="./typography.html">
+                <a asp-controller="Category" asp-action="Index">
                     <i class="nc-icon nc-tag-content"></i>
                     <p>Categories</p>
                 </a>
             </li>
             <li>
-                <a href="./notifications.html">
+                <a asp-controller="Author" asp-action="Index">
                     <i class="nc-icon nc-badge"></i>
                     <p>Authors</p>
                 </a>
             </li>
             <li>
-                <a href="./user.html">
+                <a asp-controller="Publisher" asp-action="Index">
                     <i class="nc-icon nc-bold"></i>
                     <p>Publishers</p>
                 </a>
             </li>
             <li>
-                <a href="./tables.html">
+                <a asp-controller="Department" asp-action="Index">
                     <i class="nc-icon nc-tile-56"></i>
                     <p>Departments</p>
                 </a>
             </li>
             <li>
-                <a href="./upgrade.html">
-                    <i class="nc-icon nc-globe"></i>
-                    <p>Languages</p>
+                <a asp-controller="Reservation" asp-action="Index">
+                    <i class="nc-icon nc-check-2"></i>
+                    <p>Reservations</p>
                 </a>
             </li>
             <li>
-                <a href="./upgrade.html">
+                <a asp-controller="User" asp-action="Index">
                     <i class="nc-icon nc-single-02"></i>
                     <p>Users</p>
                 </a>
             </li>
             <li>
-                <a href="./upgrade.html">
+                @*TODO: User controller not index action but like thisUser or smt*@
+                <a asp-controller="User" asp-action="Index">
                     <i class="nc-icon nc-settings-gear-65"></i>
                     <p>Profile</p>
                 </a>
             </li>
             <li>
-                <a href="./upgrade.html">
-                    <i class="nc-icon nc-check-2"></i>
-                    <p>Reservations</p>
+                <a asp-controller="Rate" asp-action="Index">
+                    <i class="nc-icon nc-money-coins"></i>
+                    <p>Rates</p>
+                </a>
+            </li>
+            <li>
+                <a asp-controller="Language" asp-action="Index">
+                    <i class="nc-icon nc-globe"></i>
+                    <p>Languages</p>
                 </a>
             </li>
             <li class="active-pro">
-                <a href="./upgrade.html">
+                <a asp-controller="Log" asp-action="Index">
                     <i class="nc-icon nc-single-copy-04"></i>
                     <p>Logs</p>
                 </a>
