LibApp.WebApp - _NavbarPartial Pages Links

--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -27,7 +27,6 @@
                     <p>Books</p>
                 </a>
             </li>
-            
             <li>
                 <a asp-controller="Category" asp-action="Index">
                     <i class="nc-icon nc-tag-content"></i>
@@ -64,13 +63,13 @@
                     <p>Users</p>
                 </a>
             </li>
-            <li>
-                @*TODO: User controller not index action but like thisUser or smt*@
+            @*<li>
+                TODO: User controller not index action but like thisUser or smt
                 <a asp-controller="User" asp-action="Index">
                     <i class="nc-icon nc-settings-gear-65"></i>
                     <p>Profile</p>
                 </a>
-            </li>
+            </li>*@
             <li>
                 <a asp-controller="Rate" asp-action="Index">
                     <i class="nc-icon nc-money-coins"></i>
