--- a/LibApp.WebApp/Views/Shared/Partials/_NavbarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_NavbarPartial.cshtml
@@ -11,7 +11,7 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
             </div>
-            <a class="navbar-brand" href="javascript:;">Paper Dashboard 2</a>
+            <span class="navbar-brand" href="javascript:;">@ViewData["Title"]</span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -19,6 +19,9 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
+
+            @*TODO: Form needed?*@
+
             <form>
                 <div class="input-group no-border">
                     <input type="text" value="" class="form-control" placeholder="Search...">
@@ -29,18 +32,22 @@
                     </div>
                 </div>
             </form>
+
+            @*TODO: Buttons?: Profile, profile pic*@
+
             <ul class="navbar-nav">
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link btn-magnify" href="javascript:;">
                         <i class="nc-icon nc-layout-11"></i>
                         <p>
                             <span class="d-lg-none d-md-block">Stats</span>
                         </p>
                     </a>
-                </li>
+                </li>*@
+                @*TODO: User controller not index action but like thisUser or smt*@
                 <li class="nav-item btn-rotate dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="nc-icon nc-bell-55"></i>
+                    <a class="nav-link dropdown-toggle" asp-controller="User" asp-action="Index" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="nc-icon nc-settings-gear-65"></i>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
@@ -51,14 +58,14 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link btn-rotate" href="javascript:;">
+                @*<li class="nav-item">
+                    <a class="nav-link btn-rotate" asp-controller="User" asp-action="Index">
                         <i class="nc-icon nc-settings-gear-65"></i>
                         <p>
                             <span class="d-lg-none d-md-block">Account</span>
                         </p>
                     </a>
-                </li>
+                </li>*@
             </ul>
         </div>
     </div>
