--- a/LibApp.WebApp/Views/Shared/Partials/_FooterPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_FooterPartial.cshtml
@@ -6,16 +6,16 @@
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://www.creative-tim.com" target="_blank">Creative Tim</a></li>
+                    <li><a href="https://github.com/skyhunter96" target="_blank">Mladen Karic</a></li>@*
                     <li><a href="https://www.creative-tim.com/blog" target="_blank">Blog</a></li>
-                    <li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>
+                    <li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>*@
                 </ul>
             </nav>
             <div class="credits ml-auto">
                 <span class="copyright">
                     © <script>
                                       document.write(new Date().getFullYear())
-                                </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim
+                    </script>, made with <i class="fa fa-heart heart"></i> by Mladen Karic
                 </span>
             </div>
         </div>
