LibApp.WebApp - BooksController Code Generation

--- a/LibApp.WebApp/Views/Shared/Partials/_NavbarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_NavbarPartial.cshtml
@@ -33,7 +33,7 @@
                 </div>
             </form>
 
-            @*TODO: Buttons?: Profile, profile pic*@
+            @*TODO: Buttons?: Profile, profile pic, dropdown actions*@
 
             <ul class="navbar-nav">
                 @*<li class="nav-item">
