--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -22,43 +22,43 @@
                 </a>
             </li>
             <li>
-                <a asp-controller="Book" asp-action="Index">
+                <a asp-controller="Books" asp-action="Index">
                     <i class="nc-icon nc-book-bookmark"></i>
                     <p>Books</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Category" asp-action="Index">
+                <a asp-controller="Categories" asp-action="Index">
                     <i class="nc-icon nc-tag-content"></i>
                     <p>Categories</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Author" asp-action="Index">
+                <a asp-controller="Authors" asp-action="Index">
                     <i class="nc-icon nc-badge"></i>
                     <p>Authors</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Publisher" asp-action="Index">
+                <a asp-controller="Publishers" asp-action="Index">
                     <i class="nc-icon nc-bold"></i>
                     <p>Publishers</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Department" asp-action="Index">
+                <a asp-controller="Departments" asp-action="Index">
                     <i class="nc-icon nc-tile-56"></i>
                     <p>Departments</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Reservation" asp-action="Index">
+                <a asp-controller="Reservations" asp-action="Index">
                     <i class="nc-icon nc-check-2"></i>
                     <p>Reservations</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="User" asp-action="Index">
+                <a asp-controller="Users" asp-action="Index">
                     <i class="nc-icon nc-single-02"></i>
                     <p>Users</p>
                 </a>
@@ -71,19 +71,19 @@
                 </a>
             </li>*@
             <li>
-                <a asp-controller="Rate" asp-action="Index">
+                <a asp-controller="Rates" asp-action="Index">
                     <i class="nc-icon nc-money-coins"></i>
                     <p>Rates</p>
                 </a>
             </li>
             <li>
-                <a asp-controller="Language" asp-action="Index">
+                <a asp-controller="Languages" asp-action="Index">
                     <i class="nc-icon nc-globe"></i>
                     <p>Languages</p>
                 </a>
             </li>
             <li class="active-pro">
-                <a asp-controller="Log" asp-action="Index">
+                <a asp-controller="Logs" asp-action="Index">
                     <i class="nc-icon nc-single-copy-04"></i>
                     <p>Logs</p>
                 </a>
