--- a/LibApp.WebApp/Views/Shared/Partials/_FooterPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_FooterPartial.cshtml
@@ -4,13 +4,11 @@
 <footer class="footer footer-black  footer-white ">
     <div class="container-fluid">
         <div class="row">
-            <nav class="footer-nav">
+@*            <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://github.com/skyhunter96" target="_blank">Mladen Karic</a></li>@*
-                    <li><a href="https://www.creative-tim.com/blog" target="_blank">Blog</a></li>
-                    <li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>*@
+                    <li><a href="https://github.com/skyhunter96" target="_blank">Mladen Karic</a></li>
                 </ul>
-            </nav>
+            </nav>*@
             <div class="credits ml-auto">
                 <span class="copyright">
                     © <script>
