--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -15,6 +15,14 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+
+            @*TODO: Authors if not exist create, select list with more*@
+
+            <div class="form-group">
+                <label asp-for="Authors" class="control-label"></label>
+                <input asp-for="Authors" class="form-control" />
+                <span asp-validation-for="Authors" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <textarea asp-for="Description" class="form-control" rows="6"></textarea>
