--- a/LibApp.WebApp/Views/Books/Delete.cshtml
+++ b/LibApp.WebApp/Views/Books/Delete.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.Edition)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ReleaseYear)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ReleaseYear)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
         <dd class = "col-sm-10">
