--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+<h1>Create</h1>
+
 <h4>Book</h4>
 <hr />
 <div class="row">
@@ -37,6 +39,11 @@
                 <label asp-for="Edition" class="control-label"></label>
                 <input asp-for="Edition" class="form-control" />
                 <span asp-validation-for="Edition" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ReleaseYear" class="control-label"></label>
+                <input asp-for="ReleaseYear" class="form-control" />
+                <span asp-validation-for="ReleaseYear" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublisherId" class="control-label"></label>
