--- a/LibApp.WebApp/Views/Books/Edit.cshtml
+++ b/LibApp.WebApp/Views/Books/Edit.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ReleaseYear" class="control-label"></label>
+                <input asp-for="ReleaseYear" class="form-control" />
+                <span asp-validation-for="ReleaseYear" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="PublisherId" class="control-label"></label>
                 <select asp-for="PublisherId" class="form-control" asp-items="ViewBag.PublisherId"></select>
                 <span asp-validation-for="PublisherId" class="text-danger"></span>
