LibApp.WebApp - BooksController Details Fix

--- a/LibApp.WebApp/Views/Books/Details.cshtml
+++ b/LibApp.WebApp/Views/Books/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Domain.Models.Book
+﻿@using Microsoft.IdentityModel.Tokens
+@model LibApp.WebApp.ViewModels.BookViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -16,6 +17,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
+
+        @if (Model.Authors.Any())
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Authors)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Authors)
+            </dd>
+        }
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -40,12 +52,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReleaseYear)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
+
+        @if (Model.Cost.HasValue)
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Cost)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Cost)
+            </dd>
+        }
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsAvailable)
         </dt>
@@ -70,30 +87,47 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReservedQuantity)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Publisher)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Publisher.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Language)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Language.Name)
-        </dd>
+
+        @if (!Model.Publisher.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Publisher)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Publisher)
+            </dd>
+        }
+
+        @if (!Model.Category.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Category)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Category)
+            </dd>
+        }
+        
+        @if (!Model.Department.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Department)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Department)
+            </dd>
+        }
+        
+        @if (!Model.Language.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Language)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Language)
+            </dd>
+        }
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDateTime)
         </dt>
@@ -106,18 +140,27 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDateTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedByUserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByUserId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedByUserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedByUserId)
-        </dd>
+        
+        @if (!Model.CreatedByUser.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.CreatedByUser)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.CreatedByUser)
+            </dd>
+        }
+        
+        @if (!Model.ModifiedByUser.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.ModifiedByUser)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.ModifiedByUser)
+            </dd>
+        }
+
     </dl>
 </div>
 <div>
