--- a/LibApp.WebApp/Views/Books/Edit.cshtml
+++ b/LibApp.WebApp/Views/Books/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@model Domain.Models.Book
+﻿@*TODO:
+@model IEnumerable<LibApp.WebApp.ViewModels.BookViewModel>
+*@
+@model Domain.Models.Book
 
 @{
     ViewData["Title"] = "Edit";
