LibApp.WebApp - Select2 Installation

--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
         <link href="/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="/css/paper-dashboard.css?v=2.0.1" rel="stylesheet"/>
         <link href="/demo/demo.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -46,6 +47,7 @@
         <script src="/js/core/popper.min.js"></script>
         <script src="/js/core/bootstrap.min.js"></script>
         <script src="/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
         <!--  Google Maps Plugin    -->
         <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
