--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -57,6 +57,39 @@
         <script src="/js/plugins/bootstrap-notify.js"></script>
 
         <script src="/demo/demo.js"></script>
+    
+        <!--   Select2 -->
+        <script>
+            $(document).ready(function () {
+                $("#Authors").select2({
+                    placeholder: "Select authors", // Placeholder text
+                });
+            });
+
+            $(document).ready(function () {
+                $("#PublisherId").select2({
+                    placeholder: "Select publishers", // Placeholder text
+                });
+            });
+
+            $(document).ready(function () {
+                $("#CategoryId").select2({
+                    placeholder: "Select categories", // Placeholder text
+                });
+            });
+
+            $(document).ready(function () {
+                $("#DepartmentId").select2({
+                    placeholder: "Select departments", // Placeholder text
+                });
+            });
+
+            $(document).ready(function () {
+                $("#LanguageId").select2({
+                    placeholder: "Select languages", // Placeholder text
+                });
+            });
+        </script>
 
     </body>
 
