LibApp.WebApp - ReleaseYear JS Init Current Year

--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -10,9 +10,11 @@
         <title>@ViewData["Title"] - LibApp.WebApp</title>
 
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
+
         <!--     Fonts and icons     -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+
         <!-- CSS Files -->
         <link href="/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="/css/paper-dashboard.css?v=2.0.1" rel="stylesheet"/>
@@ -88,6 +90,11 @@
                 $("#LanguageId").select2({
                     placeholder: "Select languages", // Placeholder text
                 });
+            });
+
+            $(document).ready(function () {
+                var releaseYearInput = document.getElementById("ReleaseYear");
+                releaseYearInput.value = new Date().getFullYear();
             });
         </script>
 
