LibApp.WebApp - Book Author Selection

--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -21,9 +21,10 @@
             @*TODO: Authors if not exist create, new select list, both inputs present*@
             <div class="form-group">
                 <label asp-for="Authors" class="control-label"></label>
-                <select asp-for="Authors" class="form-control" asp-items="ViewBag.Authors" multiple="multiple"></select>
+                <select asp-for="Authors" name="Authors" class="form-control" asp-items="ViewBag.Authors" multiple="multiple"></select>
                 <span asp-validation-for="Authors" class="text-danger"></span>
             </div>
+
             <br/>
             <p>If author doesn't exist, enter new author:</p>
 
