LibApp.WebApp - BookViewModel Custom Validation

--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -20,9 +20,9 @@
 
             @*TODO: Authors if not exist create, new select list, both inputs present*@
             <div class="form-group">
-                <label asp-for="Authors" class="control-label"></label>
-                <select asp-for="Authors" name="Authors" class="form-control" asp-items="ViewBag.Authors" multiple="multiple"></select>
-                <span asp-validation-for="Authors" class="text-danger"></span>
+                <label asp-for="AuthorIds" class="control-label"></label>
+                <select asp-for="AuthorIds" name="AuthorIds" class="form-control" asp-items="ViewBag.AuthorIds" multiple="multiple"></select>
+                <span asp-validation-for="AuthorIds" class="text-danger"></span>
             </div>
 
             <br/>
