--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
         <!--   Select2 -->
         <script>
             $(document).ready(function () {
-                $("#Authors").select2({
+                $("#AuthorIds").select2({
                     placeholder: "Select authors", // Placeholder text
                 });
             });
