--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -22,7 +22,16 @@
             <div class="form-group">
                 <label asp-for="AuthorIds" class="control-label"></label>
                 <select asp-for="AuthorIds" name="AuthorIds" class="form-control" asp-items="ViewBag.AuthorIds" multiple="multiple"></select>
-                <span asp-validation-for="AuthorIds" class="text-danger"></span>
+                @{
+                    var modelErrorCollection = ViewData.ModelState["AuthorIds"]?.Errors;
+                }
+                @if (modelErrorCollection != null)
+                {
+                    foreach (var error in modelErrorCollection)
+                    {
+                        <span class="text-danger">@error.ErrorMessage</span>
+                    }
+                }
             </div>
 
             <br/>
@@ -88,17 +97,17 @@
             </div><br />
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
+                <input asp-for="Quantity" class="form-control" value="1"/>
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AvailableQuantity" class="control-label"></label>
-                <input asp-for="AvailableQuantity" class="form-control" />
+                <input asp-for="AvailableQuantity" class="form-control" value="1" />
                 <span asp-validation-for="AvailableQuantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReservedQuantity" class="control-label"></label>
-                <input asp-for="ReservedQuantity" class="form-control" />
+                <input asp-for="ReservedQuantity" class="form-control" value="0" />
                 <span asp-validation-for="ReservedQuantity" class="text-danger"></span>
             </div>
             <div class="form-group">
