--- a/LibApp.WebApp/Views/Books/Details.cshtml
+++ b/LibApp.WebApp/Views/Books/Details.cshtml
@@ -18,7 +18,6 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         
-        @*TODO: Bad format: (1, Ivo Andrić) *@
         @if (Model.Authors.Any())
         {
             <dt class="col-sm-2">
@@ -27,7 +26,9 @@
             <dd class="col-sm-10">
                 @foreach (var author in Model.Authors)
                 {
-                    <span>@author.AuthorName</span><br />
+                    <a href="@Url.Action("Index", "Authors", new { id = author.AuthorId })">
+                        <span>@author.AuthorName</span><br />
+                    </a>
                 }
             </dd>
         }
